infrastructure/kubernetes/bootstrap/argocd-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
    name: argocd
    labels:
        gateway-access: "true"
